# real-estate-crm-scraper

./: .cursorrules  .gitignore  .railwayignore  BUGFIX_SUMMARY.md  CURL_CFFI_TROUBLESHOOTING.md  DEPLOYMENT_NOTES.md  DYNAMIC_PROGRESS_TRACKING.md  HOMEHARVEST_FORK_MODIFICATIONS.md  MLS_CRM_SYNCHRONIZATION.md  MODIFY_HOMEHARVEST_FORK.md  NEW_SCHEDULER_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  TRIGGERED_JOBS_FEATURE.md  check_db.py  check_property_details.py  check_proxy_config.py  comprehensive_scraper.py  config.py  create_full_year_sold_jobs.py  database.py  debug_job.py  debug_scraper_vs_direct.py  enrich_test_property.py  env_example.txt  find_properties_with_insights.py  main.py  main.py.bak  manual_test_rentcast.py  migration_log.txt  migration_output.txt  models.py  nixpacks.toml  optimized_scraper.py  proxy_manager.py  railway.toml  re_enrich_all.py  requirements.txt  scheduler.py  scraper.py  (+12 more)
config/: enrichment_scoring.yaml
docs/: API_REFERENCE.md  CHANGELOG.md  CHANGE_LOGS_EMBEDDING_IMPLEMENTATION.md  CHANGE_LOGS_EMBEDDING_RECOMMENDATION.md  CHANGE_LOGS_LOCATION.md  CONSOLIDATION_TEST_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT_SEQUENCE.md  DUPLICATION_ANALYSIS.md  DYNAMIC_PRICE_REDUCTION_FILTERING.md  EMBEDDING_CHANGE_LOGS_ANALYSIS.md  EMBEDDING_CHANGE_LOGS_SUMMARY.md  FINAL_TEST_REPORT.md  INTEGRATION_GUIDE.md  OFF_MARKET_DETECTION_PRODUCTION.md  PRICE_REDUCTION_QUERIES.md  PROPERTY_STORAGE_OPTIMIZATION.md  PROPWIRE_API_INVESTIGATION.md  PROPWIRE_SCRAPER_PROPOSAL.md  PROPWIRE_SCRAPER_REVIEW_SUMMARY.md  README.md  (+3 more)
openai_agent_lookup/: CHANGELOG.md  EXAMPLES.md  GETTING_STARTED.md  INSTALL.md  INTEGRATION_GUIDE.md  LIBRARY_OVERVIEW.md  PYTHON314.md  QUICKSTART.md  README.md  UPDATES_SUMMARY.md  __init__.py  agent.py  client.py  models.py  pyproject.toml  requirements.txt  server_example.py  setup.py  test_python314.py  test_updates.py
(+88 files in other folders)
